horizontal scrolling fix

--- a/src/app/views/main/main.component.scss
+++ b/src/app/views/main/main.component.scss
@@ -41,12 +41,11 @@
 #contact {
     background: black;
     color: white;
-    width: 100%;
     text-align: center;
     padding: 15px;
     font-size: small;
     font-style: italic;
-    
+
     > span {
         padding: 0 10px;
     }
